--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,12 +5,12 @@
     <% } %>
     <form action="/login" method="POST">
     <div>
-        <label for= "ntid"> NTID </label>
+        <label for= "ntid"> NTID </label> <br>
         <input type ="text" id="ntid" name="ntid" 
         required
     </div>
     <div>
-        <label for= "password"> Password </label>
+        <label for= "password"> Password </label><br>
         <input type ="password" id="password" name="password" 
         required
     </div>
