--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,17 +2,17 @@
     <h1>Register</h1>
     <form action="/register" method="POST">
     <div>
-        <label for= "name"> Name </label>
+        <label for= "name"> Name </label><br>
         <input type ="text" id="name" name="name" 
         required
     </div>
     <div>
-        <label for= "ntid"> NTID </label>
+        <label for= "ntid"> NTID </label><br>
         <input type ="text" id="ntid" name="ntid" 
         required
     </div>
     <div>
-        <label for= "password"> Password </label>
+        <label for= "password"> Password </label><br>
         <input type ="password" id="password" name="password" 
         required
     </div>
